--- a/src/components/MoviesComponents/Movies/movies.scss
+++ b/src/components/MoviesComponents/Movies/movies.scss
@@ -24,33 +24,4 @@
       color: rgb(51, 51, 51);
     }
   }
-
-  @media screen and (min-width: 800px) {
-    .card {
-      flex: 0 1 calc(18.8% - 0.3rem);
-    }
-  }
-
-  @media screen and (max-width: 1125px) {
-    .card {
-      flex: 0 1 calc(21% - 0.4rem);
-    }
-  }
-
-  @media screen and (max-width: 855px) {
-    .card {
-      flex: 0 1 calc(30% - 0.5rem);
-    }
-  }
-
-  @media screen and (max-width: 455px) {
-    .card {
-      flex: 0 1 calc(33% - 0.3rem);
-    }
-
-    .scroll-up-button {
-      width: 44px !important;
-      height: 40px !important;
-    }
-  }
 }
