--- a/src/components/TVShowsComponents/TVShowItem/TVShowItem.scss
+++ b/src/components/TVShowsComponents/TVShowItem/TVShowItem.scss
@@ -75,42 +75,6 @@
   }
 }
 
-@media screen and (min-width: 800px) {
-  .card {
-    flex: 0 1 calc(18.8%);
-    min-height: 35vh !important;
-  }
-}
-
-@media screen and (max-width: 1325px) {
-  .card {
-    flex: 0 1 calc(24.9% - 0.5rem);
-  }
-}
-
-@media screen and (max-width: 1125px) {
-  .card {
-    flex: 0 1 calc(22% - 0.5rem);
-  }
-}
-
-@media screen and (max-width: 855px) {
-  .card {
-    flex: 0 1 calc(30% - 0.5rem);
-  }
-}
-
-@media screen and (max-width: 455px) {
-  .card {
-    flex: 0 1 calc(33% - 0.8rem);
-  }
-
-  .scroll-up-button {
-    width: 44px !important;
-    height: 40px !important;
-  }
-}
-
 @media (max-width: 675px) {
   .details {
     display: none;
